Editing Study name in header works on front-end (but throws an error on back end).  Simplifying site header CSS.  Fixing problems with h1,h2,h3 etc banner sizing.  Simplified "create study" page as a stopgap, to be replaced by a modal.  Fixing layout glitches on "recent Studies" list.  Restoring "Add Study" as an href, since it got blasted during the last merge.

--- a/main/static/main/common.css
+++ b/main/static/main/common.css
@@ -1,6 +1,6 @@
 /* CSS reset */
 
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, img, strike, strong, sup, b,
+html, body, div, span, p, a, em, img, strike, strong, sup, b,
 u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, tbody, thead,
 tfoot, tr, th, td {
     border: 0;
@@ -10,6 +10,13 @@ tfoot, tr, th, td {
     padding: 0;
     vertical-align: middle;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     line-height: 1;
     padding-left: 20px;
@@ -34,6 +41,7 @@ HTML {
 }
 H1, H2, H3, H4 {
     margin:3px;
+
 }
 p {
     margin:0.4em;
@@ -205,10 +213,10 @@ div.topBanner > div.siteLogo {
 div.topBanner > div.pageName {
     color: #6c6c6c;
     font-size: 20pt;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: auto;
-    margin-left: 20px;
+    margin: auto 20px auto 20px;
+    flex-grow:1;
+    border: 0;
+    padding: 0;
 }
 div.topBanner > div.userMenu {
     flex-shrink: 0;
@@ -731,17 +739,10 @@ table.filterCriteriaTable input[type="checkbox"] {
     margin-right: 4px;
     vertical-align: middle;
 }
-p.lastViewed {
-    font-size: 24px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    font-weight: bold;
-}
 div.lastViewed {
     margin-left: 20px;
-    margin-right: 50%;
 }
-a.lastViewed {
+div.lastViewed span {
     display: inline-block;
     background-color: white;
     margin-bottom: 5px;
@@ -991,7 +992,7 @@ table.formTable {
 }
 table.formTable tr > td {
     text-align:left;
-    vertical-align:middle;
+    vertical-align:top;
     padding:4px 6px 4px 4px;
 }
 table.formTable tr > td.form-label {
@@ -1027,7 +1028,6 @@ table.formTable tr > td p {
     padding:0px;
 }
 table.formTable tr > td textarea {
-    vertical-align:top;
     margin:0;
     padding:0;
 }
@@ -1186,8 +1186,6 @@ div.graphClickWidget {
 div.form-value {
     word-break: break-all;
     word-wrap: break-word;
-    display: inline-block;
-/*    max-width: 100%; */
     white-space:pre-wrap;
 }
 div.editable-field {
@@ -1196,8 +1194,6 @@ div.editable-field {
     box-sizing: border-box;
     border-radius: 2.01px;
     cursor: text;
-    display: inline-block;
-/*    max-width: 100%; */
     position: relative;
     vertical-align: top;
     word-break: break-all;
@@ -1211,9 +1207,13 @@ div.editable-field.inactive {
     transition: box-shadow 150ms ease-in 0ms;
     box-shadow: 0 0 0 0 transparent;
 }
+div.editable-field input, div.editable-field textarea {
+    width:90%;
+}
 div.editable-field.inactive input, div.editable-field.inactive textarea {
     display:none;
 }
+
 div.editable-field:hover, .editable-field.saving {
     box-shadow: 0 0 0 1px rgba(108,164,233,0.6);
 }
@@ -1391,7 +1391,6 @@ dl.infolist > dd {
 }
 
 .form-label {
-  vertical-align: middle;
 }
 
 form.attachments > * {
